Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: 'MeetingManagerAndroid'
-    gradleWrapperFile: 'MeetingManagerAndroid/gradle/wrapper/gradle-wrapper.properties'
+    workingDirectory: 'Android/MeetingManagerAndroid/app'
+    gradleWrapperFile: 'Android/MeetingManagerAndroid/app/gradle-wrapper.properties'
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
