--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: Gradle@2
   inputs:
     workingDirectory: 'MeetingManagerAndroid/app'
-    gradleWrapperFile: 'MeetingManagerAndroid/app/gradle-wrapper.properties'
+    gradleWrapperFile: 'MeetingManagerAndroid/app/gradlew'
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
