--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,8 @@ pool:
 steps:
 - task: Gradle@2
   inputs:
-    workingDirectory: 'MeetingManagerAndroid/app'
-    gradleWrapperFile: 'MeetingManagerAndroid/app/gradlew'
+    workingDirectory: '$(system.defaultWorkingDirectory)/MeetingManagerAndroid/app'
+    gradleWrapperFile: '$(system.defaultWorkingDirectory)/MeetingManagerAndroid/app/gradle.properties'
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
